--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,10 +90,10 @@ jobs:
           cache-from: |
             type=gha,scope=${{ inputs.service_name }}-${{ github.ref_name }}
             type=gha,scope=${{ inputs.service_name }}-main
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ inputs.service_name }}:cache
+            type=gha,scope=${{ inputs.service_name }}-base
           cache-to: |
             type=gha,scope=${{ inputs.service_name }}-${{ github.ref_name }},mode=max
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ inputs.service_name }}:cache,mode=max
+            type=gha,scope=${{ inputs.service_name }}-base,mode=max
 
       - name: Display Built Image
         run: |
