--- a/.github/workflows/helper-build.yml
+++ b/.github/workflows/helper-build.yml
@@ -12,23 +12,11 @@ on:
       image_tag:
         description: 'Generated image tag'
         value: ${{ jobs.build.outputs.image_tag }}
-  workflow_dispatch:
-    inputs:
-      service_name:
-        description: 'Service name'
-        required: true
-        type: choice
-        options:
-          - app-node
-          - tpl-wrk-thing
-          - wrk-base
-          - wrk-book
-          - wrk-ork
 
 jobs:
   build:
     name: Build Node.js Service Docker Image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       id-token: write
       contents: read
@@ -47,8 +35,16 @@ jobs:
         with:
           token: ${{ steps.generate-token.outputs.token }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Log build details
+        run: |
+          echo "Service name: '${{ inputs.service_name }}'"
+          echo "Workflow name: '${{ github.workflow }}'"
 
       - name: Extract metadata
         id: meta
@@ -59,7 +55,7 @@ jobs:
             ${{ inputs.service_name }}
           tags: |
             # Main branch -> latest
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
             # Dev branch -> development
             type=raw,value=development,enable=${{ github.ref == 'refs/heads/dev' }}
             # All other branches -> alpha with short SHA
@@ -75,7 +71,8 @@ jobs:
           file: "./Dockerfile"
           platforms: linux/amd64,linux/arm64
           push: false
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: |
             type=gha,scope=${{ inputs.service_name }}-${{ github.ref_name }}
@@ -91,6 +88,6 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Service:** \`${{ inputs.service_name }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** \`${{ steps.meta.outputs.tags }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Docker Image:** \`${{ steps.meta.outputs.tags }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Platforms:** linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
