--- a/.github/workflows/helper-tests.yml
+++ b/.github/workflows/helper-tests.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-24.04
     defaults:
       run:
-        working-directory: ./${{ inputs.service_name }}
+        working-directory: ./services/${{ inputs.service_name }}
     steps:
       - name: Generate GitHub App Token
         id: generate-token
