--- a/.github/workflows/app-node.yml
+++ b/.github/workflows/app-node.yml
@@ -5,14 +5,12 @@ on:
   push:
     branches: [main]
     paths:
-      - 'app-node/**'
-      - 'Dockerfile'
+      - 'services/app-node/**'
 
   pull_request:
     branches: [main]
     paths:
-      - 'app-node/**'
-      - 'Dockerfile'
+      - 'services/app-node/**'
 
   workflow_dispatch:
 
