--- a/services/app-node/Dockerfile
+++ b/services/app-node/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:22-slim AS base
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN --mount=type=cache,target=/var/cache/apt \
+    apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libatomic1 \
     && rm -rf /var/lib/apt/lists/*
@@ -15,7 +16,8 @@ WORKDIR /app
 COPY . .
 
 # Prune the monorepo to only include necessary files
-RUN npx -y turbo prune app-node --docker
+RUN --mount=type=cache,target=/root/.turbo \
+    npx -y turbo prune app-node --docker
 
 FROM base AS installer
 
@@ -28,6 +30,7 @@ COPY --from=builder /app/out/package-lock.json ./package-lock.json
 
 # Install dependencies with npm cache mount for faster rebuilds
 RUN --mount=type=cache,target=/root/.npm \
+    --mount=type=cache,target=/root/.turbo \
     npm ci --no-audit --no-fund
 
 # Copy source and build
