--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "dev": "turbo run dev --parallel"
   },
   "devDependencies": {
     "turbo": "^2.5.7"
