--- a/turbo.json
+++ b/turbo.json
@@ -6,8 +6,7 @@
     },
     "lint": {},
     "test": {
-      "dependsOn": ["^build"],
-      "outputs": ["coverage/**"]
+      "dependsOn": ["^build"]
     }
   }
 }
