--- a/services/app-node/package.json
+++ b/services/app-node/package.json
@@ -7,7 +7,8 @@
     "lint": "standard",
     "lint:fix": "standard --fix",
     "test": "echo 'Running tests...'",
-    "build": "echo 'Building app-node...'"
+    "build": "echo 'Building app-node...'",
+    "setup:config": "./setup-config.sh"
   },
   "keywords": [
     "app",
