--- a/services/wrk-book/package.json
+++ b/services/wrk-book/package.json
@@ -6,7 +6,8 @@
     "dev": "node worker.js --wtype wrk-book-rack --env development --rack 25d0c2e5-3d14-4975-bddf-b836bdf3842a9 --debug false",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "build": "echo 'Building wrk-book...'"
+    "build": "echo 'Building wrk-book...'",
+    "setup:config": "./setup-config.sh"
   },
   "keywords": [
     "tpl",
